--- a/service_b/Dockerfile
+++ b/service_b/Dockerfile
@@ -8,7 +8,7 @@ RUN if [ ! -f go.mod ]; then go mod init service_b; fi
 
 RUN go mod tidy
 
-RUN go build -o service_b .
+RUN go build -o service_b ./cmd
 
 EXPOSE 8081
 
